test/files/pos/Y.scala
object test {

  def f(x: Object): Object = x.match;

}


